Implement native mobile MVP
